testing/error/errortesting.inp
* B C I III II ABCD
FROM his shoulder Hiawatha
Took the camera of rosewood
